MNEMOSYNE 0.9.7

-added option to import text files where question and answer each are on
 their own line.
-improved import dialog.
-made the OK button respond to the enter key in a few dialogs. (reported 
 by J. Forrez.)
-worked around Microsoft oddity when importing Word unicode text files.


MNEMOSYNE 0.9.6: 2006-10-07

-added LaTeX support for formulas, e.g. <latex>x^2+y^2=z^2</latex>. For 
 this you need latex and dvipng installed. Windows users can download 
 MiKTeX. (thanks to input from Henrik Skov Midtiby and J. David Lee.)
-added possibility to preview an item. Useful if you work with tags.
-added import from SuperMemo7 text files (code thanks to Dirk Herrmann).
-either space, enter or return can be used to show the answer. The default
 answer grade is set to 4, which once again can be chosen by either space,
 enter or return (patch by Dirk Herrmann).
-importing of txt files in utf8 unicode encoding now works (patch by Ian 
 MacLean).
-exporting to txt files now uses utf8 encoding.
-the total number of items in the status bar now only takes into account
 items in active categories (patch by Mike Charlton).
-prevent infinite recursion when searching for an item that was recently 
 deleted.
-the titlebar now displays unicode filenames correctly.
-after the window expands to accomodate a large item, it will shrink 
 back again.
-fixed incorrect button text when switching databases.
-new grade 0/1 items will now be scheduled after existing grade 0/1 items.


MNEMOSYNE 0.9.5: 2006-08-03

*** IMPORTANT UPGRADE NOTICE ***

This version uses a different database format. Before upgrading, export your
old data as xml. After upgrade, create a new database and import the old data
from the xml file.

-databases can now be moved back and forth between Windows and Unix.
-added 'Reset learning data on export' option. This makes it easier to 
 create a file to share with other people.
-the database is now saved each time a new item is added.