@@ -1,11 +1,19 @@
 MNEMOSYNE 0.9.7
 
--added option to import text files where question and answer each are on
+(Note that for Windows users we recommend uninstalling the previous 
+version before doing an upgrade.)
+
+-multiple items can now be selected in the 'edit items' dialog in order
+ to delete them, change their categories, or add their vice versas.
+-added option to import text files where question and answer are each on
  their own line.
+-make delete button work in 'edit items' dialog (reported by J. Forrez).
+-made the OK button respond to the enter key in a few more dialogs 
+ (reported by J. Forrez).
 -improved import dialog.
--made the OK button respond to the enter key in a few dialogs. (reported 
- by J. Forrez.)
--worked around Microsoft oddity when importing Word unicode text files.
+-worked around oddity (extra first character in text file) when importing 
+ Word unicode text files.
+-updated documentation on the website.
 
 
 MNEMOSYNE 0.9.6: 2006-10-07
